--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
 <script src="app/widgets/dashboard-structures.js"></script>
 <script src="app/scheduler/scheduler.js"></script>
 <script src="app/scheduler/scheduler-home.js"></script>
+<script src="app/scheduler/sb-drafts/sb-drafts.js"></script>
+<script src="app/scheduler/subarrays/subarrays.js"></script>
 <!--<script src="app/widgets/gantt/gantt-widget.js"></script>-->
 <!-- Add New Component JS Above -->
 
@@ -138,7 +140,11 @@
                             <span class="fa fa-list"></span>
                             <button>Scheduler Management</button>
                         </div>
-                        <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="">
+                        <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('sb-drafts')">
+                            <span class="fa fa-pencil"></span>
+                            <button>Schedule Block Drafts</button>
+                        </div>
+                        <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('subarrays')">
                             <span class="fa fa-asterisk"></span>
                             <button>Sub-Arrays</button>
                         </div>
@@ -207,8 +213,9 @@
     </md-sidenav>
 
     <div layout="column" flex>
-        <md-toolbar ng-if="loggedIn" ng-show="vm.showNavbar" ng-class="{'slide-in-vertically-navbar': loggedIn}" class="md-whiteframe-z1" md-theme-watch="true">
-            <div class="md-toolbar-tools" layout="row" style="margin-top: -4px; padding: 0;">
+        <md-toolbar ng-if="loggedIn" ng-show="vm.showNavbar" ng-class="{'slide-in-vertically-navbar': loggedIn}" class="md-whiteframe-z1" md-theme-watch="true"
+            ng-mouseenter="showJulianDate = true" ng-mouseleave="showJulianDate = false">
+            <div class="md-toolbar-tools" layout="row" style="padding: 0;  max-height: 56px;">
 
                 <md-button aria-label="Left Navbar" class="button-toolbar-flat-icon"
                         style="margin-left: 0px; padding: 0px;"
@@ -216,7 +223,7 @@
                     <span class="fa fa-navicon"></span>
                 </md-button>
 
-                <span style="margin-top: -5px; font-size: 30px;">{{vm.currentStateUpperCase()}}</span>
+                <span style="font-size: 30px;">{{vm.currentStateUpperCase()}}</span>
 
                 <!--<div class="btn-group"-->
                      <!--ng-class="{open: vm.operatorControlHover || vm.operatorControlMenuHover}" layout="row">-->
@@ -247,17 +254,17 @@
                 <!--</div>-->
 
                 <span flex></span>
-                <div ng-if="vm.julianDay">
-                    <span style="font-size: 32px;">{{vm.julianDay}}</span><span class="toolbar-time-span" style="font-size: 9pt;"> JD</span>
+                <div ng-if="vm.julianDay" ng-show="showJulianDate">
+                    <span style="font-size: 32px;">{{vm.julianDay}}</span><span class="toolbar-time-span" style="font-size: 12px; margin-right: 8px;"> JD</span>
                     <md-tooltip>Julian Day</md-tooltip>
                 </div>
                 <div ng-if="vm.localSiderealTime">
-                    <span style="font-size: 32px;">{{vm.localSiderealTime}}</span><span class="toolbar-time-span" style="font-size: 9pt;"> LST</span>
+                    <span style="font-size: 32px;">{{vm.localSiderealTime}}</span><span class="toolbar-time-span" style="font-size: 12px;margin-right: 8px;"> LST</span>
                     <md-tooltip>Local Sidereal Time</md-tooltip>
                 </div>
                 <div ng-if="vm.utcTime">
-                    <span class="toolbar-time-span">{{vm.utcTime}}</span><span class="toolbar-time-span" style="font-size: 9pt;"> UTC</span><br/>
-                    <span class="toolbar-time-span">{{vm.localTime}}</span><span class="toolbar-time-span" style="font-size: 9pt;"> SAST</span>
+                    <span class="toolbar-time-span">{{vm.utcTime}}</span><span class="toolbar-time-span" style="font-size: 12px;"> UTC</span><br/>
+                    <span class="toolbar-time-span">{{vm.localTime}}</span><span class="toolbar-time-span" style="font-size: 12px;"> SAST</span>
                 </div>
 
                 <md-button aria-label="Home" class="button-toolbar-flat-icon" style="margin: 2px;"
