--- a/app/scheduler/scheduler-home.html
+++ b/app/scheduler/scheduler-home.html
@@ -15,7 +15,7 @@
         </div>
         <div layout="row">
             <!--style="border-right: 1px solid #e5e5e5; border-left: 1px solid #e5e5e5;"-->
-            <md-button class="scheduler-nav-home-item md-primary md-raised" ink-ripple flex ng-click="vm.stateGo('subarrays')">
+            <md-button class="scheduler-nav-home-item md-primary md-raised" ink-ripple flex ng-click="vm.stateGo('schedulerHome')">
                 <div layout="column">
                     <div style="height: 250px;" ng-include="'images/subarrays-resources.svg'"></div>
                     <span id="subarrays-img-target-color">Manage Sub-Array Resources</span></div>
